[gd_scene load_steps=5 format=3 uid="uid://cknjwd466au73"]

[ext_resource type="Script" path="res://Assets/Scripts/Drink Station/ingredientSelecter.gd" id="1_08icb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rqlq3"]
size = Vector2(70, 85)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_xirrc"]
size = Vector2(70, 85)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_kbuw8"]
size = Vector2(85, 100)

[node name="ingredientSelecter" type="Node2D"]
script = ExtResource("1_08icb")
hoveringOffset = Vector2(0, -15)

[node name="area2d" type="Area2D" parent="."]

[node name="collisionShape2d" type="CollisionShape2D" parent="area2d"]
shape = SubResource("RectangleShape2D_rqlq3")

[node name="sprite2d" type="Sprite2D" parent="."]
texture = SubResource("PlaceholderTexture2D_xirrc")

[node name="hoverGlow" type="Sprite2D" parent="sprite2d"]
visible = false
self_modulate = Color(0.4, 0.439216, 0.701961, 1)
show_behind_parent = true
texture = SubResource("PlaceholderTexture2D_kbuw8")

[connection signal="mouse_entered" from="area2d" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="area2d" to="." method="_on_area_2d_mouse_exited"]
